[gd_scene load_steps=2 format=2]

[ext_resource path="res://corrigindocód.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 64.0
margin_right = 323.0
margin_bottom = 124.0
text = "Salva os escritos"

[node name="Button2" type="Button" parent="."]
margin_left = 414.0
margin_top = 59.0
margin_right = 570.0
margin_bottom = 121.0
text = "Mostra a lista"

[node name="Button3" type="Button" parent="."]
margin_left = 631.0
margin_top = 64.0
margin_right = 772.0
margin_bottom = 118.0
text = "Mostra o nome + 'baldo'"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 858.0
margin_top = 196.0
margin_right = 1009.0
margin_bottom = 265.0
text = "Escreva um número"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 850.0
margin_top = 292.0
margin_right = 1015.0
margin_bottom = 365.0
text = "Escreva seu nome"

[node name="Label" type="Label" parent="."]
margin_left = 48.0
margin_top = 189.0
margin_right = 264.0
margin_bottom = 251.0

[node name="Label2" type="Label" parent="."]
margin_left = 105.0
margin_top = 318.0
margin_right = 318.0
margin_bottom = 391.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
